2005-10-06  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/uml2.gaphor: fixed bug with multiple ConnectableElement
	classes.

2005-09-12  wrobell <wrobell@pld-linux.org>
	* gaphor/UML/uml2.gaphor: extended Internal Structures diagram to
	support delegation and assembly connectors

2005-06-26  wrobell <wrobell@pld-linux.org>
	* setup.py, gaphor/storage.py, gaphor/UML/uml2.gaphor: use unkown
	navigability state of UML 2.0, when converting from UML 1.x association
	non-navigability (UML 2.0 metamodel fixed, too); gaphor file format
	version increased to 0.7.1

2005-06-24  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/misc/console.py, gaphor/ui/diagramtab.py,
	gaphor/ui/namespace.py: s/gtk.TRUE/True/, s/gtk.FALSE/False/.

2005-05-28  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/itemactions.py, gaphor/ui/diagramactions.py:
	capitalize menu labels, tooltips first word capitalized

2005-05-25  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/itemactions.py, gaphor/diagram/operation.py,
	gaphor/ui/namespace.py: allow to set class operation to be abstract
		
2005-05-25  wrobell <wrobell@pld-linux.org>
	* gaphor/ui/namespace.py: change font of diagram names to bold and
	abstract classifiers to italic in tree view

2005-05-24  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/itemactions.py: check if item and item.subject exist
	when executing AbstractClassAction

2005-05-24  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram.association.py: Make association redraw when setting
	navigability.

2005-05-23  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/itemactions.py gaphor/diagram/association.py: UML 2.0
	navigability support is back with fixed bug which caused problems when
	loading large UML model

2005-05-23  wrobell <wrobell@pld-linux.org>
	* gaphor/UML/uml2.override: while loading model, the association can be
	not loaded when accessing opposite property

2005-04-18  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
